[gd_scene load_steps=6 format=3 uid="uid://bpqr6asqo3j7r"]

[ext_resource type="Script" uid="uid://c0j7arkqk1uwl" path="res://ui/join_server.gd" id="1_c4lm3"]
[ext_resource type="Texture2D" uid="uid://dqqkwalgykmdn" path="res://resources/icons/back.svg" id="1_nv0ni"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_58qst"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c4lm3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kpf6r"]

[node name="JoinServer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c4lm3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
size_flags_stretch_ratio = 0.05
tooltip_text = "Quit game or logout"
theme_type_variation = &"FlatButton"
icon = ExtResource("1_nv0ni")
icon_alignment = 1
expand_icon = true

[node name="MainButtonsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/MainButtonsContainer"]
layout_mode = 2
text = "Join server"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/MainButtonsContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/MainButtonsContainer"]
layout_mode = 2
text = "Name:"
horizontal_alignment = 1

[node name="NameTextBox" type="LineEdit" parent="MarginContainer/HBoxContainer/MainButtonsContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/MainButtonsContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="IPLabel" type="Label" parent="MarginContainer/HBoxContainer/MainButtonsContainer"]
layout_mode = 2
text = "Server IP: "
horizontal_alignment = 1

[node name="IPTextBox" type="LineEdit" parent="MarginContainer/HBoxContainer/MainButtonsContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/MainButtonsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_58qst")

[node name="ConnectButton" type="Button" parent="MarginContainer/HBoxContainer/MainButtonsContainer/PanelContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Connect to server"

[node name="DisconnectButton" type="Button" parent="MarginContainer/HBoxContainer/MainButtonsContainer/PanelContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Disconnect"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/MainButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_c4lm3")

[node name="ConnectedPlayersContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MainButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ConnectedPlayersTitle" type="Label" parent="MarginContainer/HBoxContainer/MainButtonsContainer/ConnectedPlayersContainer"]
layout_mode = 2
text = "Connected players:"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/MainButtonsContainer/ConnectedPlayersContainer"]
layout_mode = 2
theme_override_constants/separation = 15
theme_override_styles/separator = SubResource("StyleBoxEmpty_kpf6r")

[node name="Container" type="Container" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[connection signal="pressed" from="MarginContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MainButtonsContainer/PanelContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MainButtonsContainer/PanelContainer/DisconnectButton" to="." method="_on_disconnect_button_pressed"]
